[package]
name = "yasps-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_derive = "1.0.130"
yasps = { version = "0.1.0", path = "../yasps" }

[[bin]]
name = "simple-client"
path = "simple_client.rs"
doc = false