[package]
name = "yasps-apps"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_derive = "1.0.130"
yasps = { version = "0.1.0", path = "../yasps" }
libc = "0.2.107"
mio = { version = "0.8.0", features = ["os-ext"] }
anyhow = "1.0.51"
tokio-eventfd = "0.2.0"
nix = "0.23.0"
linux-futex = "0.1.1"

[[bin]]
name = "simple-client"
path = "simple_client.rs"
doc = false

[[bin]]
name = "mio-exp"
path = "mio-experiments/main.rs"
doc = false

[[bin]]
name = "futures-exp"
path = "futures-exp/main.rs"
doc = false